--- a/MyMailBox-6.0/Views/Home/Index.cshtml
+++ b/MyMailBox-6.0/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var date = ViewBag.Date;
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @if (date.Hour > 16)
+    {
+        <div>Bonsoir</div>
+    }
+    else
+    {
+        <div>Bonjour</div>
+    }
 </div>
