--- a/MyMailBox-6.0/Views/Home/Index.cshtml
+++ b/MyMailBox-6.0/Views/Home/Index.cshtml
@@ -12,4 +12,8 @@
     {
         <div>Bonjour</div>
     }
+    <div>
+        <a asp-action="Index" asp-controller="MailBox" asp-route-reference="X102">Our best mailbox</a>
+        <a asp-route="discount" asp-route-reference="X102">Our best mailbox</a>
+    </div>
 </div>
