--- a/MyMailBox-6.0/Views/_ViewImports.cshtml
+++ b/MyMailBox-6.0/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MyMailBox_6._0
-@using MyMailBox_6._0.Models
+﻿@using MyMailBox
+@using MyMailBox.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
